public/css/dashboard_content.css
td,
#table-data th,
.space-nowrap {
    white-space: nowrap;
}

.alert-custom-css,
#form-group {
    max-width: 400px;
    width: 90%;
}

.center {
    text-align: center !important;
}

.custom-confirm-delete {
    margin-right: 5%;
}

.custom-cancel-delete {
    margin-left: 5%;
}

.custom-action-delete {
    width: 100% !important;
    justify-content: space-between;
}

.ibox {
    position: relative;
    margin-bottom: 25px;
    padding: 20px 20px 0;
    background-color: #fff;
    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
}

.ibox .ibox-head {
    border-bottom: 1px solid #eee;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 50px;
}

.ibox .ibox-body {
    padding: 15px 20px 20px;
}

#table-data_wrapper {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 15px;
    margin-top: 5px;
}

#table-data {
    padding: 0 20px;
}

.dataTables_length,
#table-data_filter,
.pagination {
    display: flex;
}

#table-data_filter,
.pagination {
    justify-content: flex-end;
}

.sorting:hover {
    cursor: pointer;
}

.table-responsive {
    width: 100%;
    position: relative;
    overflow-x: hidden;
}

.table-responsive .row:first-child,
.table-responsive .row:nth-child(3) {
    width: calc(100% + 22px);
    position: sticky;
    top: 0;
    background-color: white;
    z-index: 2;
}

.table-responsive .row:nth-child(2) {
    width: calc(100% + 22px);
    overflow-x: auto;
}

.table-responsive .row:nth-child(2) .col-sm-12 {
    padding: 0;
}

#table-data_wrapper .row:first-child:first-child .col-sm-12.col-md-6:first-child {
    padding: 0;
}

@media only screen and (max-width: 768px) {
    .row:first-child {
        justify-content: space-between;
        gap: 10px;
    }

    .col-sm-12.col-md-5 {
        display: none;
    }

    .col-sm-12.col-md-6:first-child {
        min-width: 200px;
    }

    .col-sm-12.col-md-6:nth-child(2) {
        min-width: 280px;
        padding-left: 0;
    }

    .col-sm-12.col-md-6 {
        width: 45%;
        padding-right: 0;
    }

    #table-data_filter {
        justify-content: flex-start;
    }
}

@media only screen and (max-width: 626px) {
    #table-data_filter {
        justify-content: flex-start;
    }
}

@media screen and (max-width: 1500px) {
    .btn-hide-text-mobile span {
        display: none;
    }

    .btn-hide-text-mobile {
        font-size: 20px;
    }

    .btn-hide-text-mobile i {
        margin-right: 0;
    }
}

.form-label.required::after {
    content: " *";
    color: red;
    font-weight: bold;
    margin-left: 2px;
}

